# Analisis-bibliometrico

./: .gitignore  README.md  pyproject.toml
Datos sin normalizar/: ScienceDirect_citations_1726852264314.txt  scopus.txt
analisis bibliometrico/application/: Conversion.py  Frecuencia.py  GenerarDatos.py  Main.py  Ordenacion.py  Parte1.py  Unificacion.py  __init__.py  estadisticas.py  ordenar.py  ordenarv2.py
analisis bibliometrico/application/Analisis de algoritmos/: BinaryInsertionSort.py  BitonicSort.py  BucketSort.py  CombSort.py  GnomeSort.py  HeapSort.py  PigeonholeSort.py  QuickSort.py  RadixSort.py  SelectionSort  TimsSort  TreeSort.py  timSort.py  timeSort.py
analisis bibliometrico/data/: Palabras_especiales.csv  ScienceDirect_citations_1727133168286.txt  ScienceDirect_citations_1727133191358.txt  ScienceDirect_citations_1727133218623.txt  ScienceDirect_citations_1727133257151.txt  ScienceDirect_citations_1727133398910.txt  ScienceDirect_citations_1727133417772.txt  ScientDirect.csv  ScientDirect_converted.csv  dataIEEE.csv  dataOrd.csv  dataOrdv2.csv
