[tool.poetry]
name = "analisis bibliometrico"
version = "0.1.0"
description = ""
authors = ["Juan Sebastian Garcia Alzate <117672609+JuanSebastianGarcia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
